feat: add canvas access authorization checks and refine canvas pool initialization lifecycle